Endpoint to get patients by population in measure
You can now get a list of patients in a particular population, like the
numerator from a RESTful endpoint. Supports limit and offset to allow users
to paginate results.
